update link on html

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   </canvas>
   <div class="emotion-output"><code id="capture-response"></code></div>
 	<p>
-		Visit our <a href="#"> github repo</a> to learn more about the technologies used here.
+		Visit our <a href="https://github.com/RefineAI/refineai-sdk"> github repo</a> to learn more about the technologies used here.
 	</p>
 </div>
 </body>
